# fastapi-async-sql-profiler

./: .env.template  .gitignore  README.md  dev.Dockerfile  docker-compose.yml  pyproject.toml  setup.cfg
fastapi_async_sql_profiler/: __init__.py  config.py  crud.py  custom_types.py  database.py  dependencies.py  main.py  models.py  pages.py  repository.py  routers.py  schemas.py  services.py  sql_middleware.py  start_debugger.py  types.py
fastapi_async_sql_profiler/schemas/: common_schemas.py  query_info_schema.py  request_info_schema.py  response_info_schema.py
fastapi_async_sql_profiler/templates/: base.html  page_clear_db.html  query_sql_details.html  request_clear_db.html  request_detail.html  request_show.html  requests_sql.html
fastapi_async_sql_profiler/templates/highlight/: local-css.html  local-scripts.html
fastapi_async_sql_profiler/templates/inclusion/: clear_db_menu.html  pagination.html  query_list_menu.html  query_sql_detail_menu.html  request_detail_menu.html  request_summary_row.html  root_filter.html  root_menu.html
fastapi_async_sql_profiler/templates/scripts/: js-scripts.html
src/: config.py  crud.py  database.py  main.py  models.py  sql_middleware.py  start_debugger.py
static/css/: default.min.css
tests/: conftest.py  test_first.py  test_services.py
