[tool.poetry]
name = "fastapi_async_sql_profiler"
version = "0.1.3.2"
description = "fastapi async sqlalchemy profiler"
authors = ["itzero-ru <paw100d@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
fastapi = {extras = ["standard"], version = ">=0.95.0"}
sqlalchemy = {extras = ["asyncio"], version = ">=2.0.16"}
aiosqlite = ">=0.18.0"
debugpy = ">=1.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
