[tool.poetry]
name = "fastapi_async_sql_profiler"
version = "0.1.3.9"
description = "fastapi async sqlalchemy profiler"
authors = ["itzero-ru <paw100d@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
sqlalchemy = {extras = ["asyncio"], version = ">=2.0.16"}
fastapi = ">=0.115.0"
jinja2 = ">=3.1.4"

[tool.poetry.group.dev.dependencies]
uvicorn = {extras = ["standard"], version = ">=0.31.0"}
debugpy = ">=1.6.0"
aiosqlite = ">=0.18.0"
# pytest = "^6.0.0"
# pytest-mock = "*"


# [tool.poetry.group.dev.dependencies]
# uvicorn = {extras = ["standard"], version = "^0.31.0"}


[tool.poetry.extras]
# mysql = ["mysqlclient"]
pdf = ["reportlab"] 
# develop = ["uvicorn[standart]"]

# [project.optional-dependencies]
# mysql = ["mysqlclient>=1.3,<2.0"]
# pgsql = ["psycopg2>=2.9,<3.0"]
# databases = ["mysqlclient>=1.3,<2.0", "psycopg2>=2.9,<3.0"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
